infrastructure/k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-ingress
spec:
  rules:
    - host: analytics.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
          - path: /processor
            pathType: Prefix
            backend:
              service:
                name: processor-service
                port:
                  number: 8001
